# docs/swagger.yaml
@@ -9,6 +9,20 @@ definitions:
       name:
         type: string
     type: object
+  models.CheckoutItem:
+    properties:
+      product_id:
+        type: integer
+      quantity:
+        type: integer
+    type: object
+  models.CheckoutRequest:
+    properties:
+      items:
+        items:
+          $ref: '#/definitions/models.CheckoutItem'
+        type: array
+    type: object
   models.Product:
     properties:
       category_description:
@@ -24,6 +38,50 @@ definitions:
       price:
         type: integer
       stock:
+        type: integer
+    type: object
+  models.ProdukTerlaris:
+    properties:
+      nama:
+        type: string
+      qty_terjual:
+        type: integer
+    type: object
+  models.Report:
+    properties:
+      produk_terlaris:
+        $ref: '#/definitions/models.ProdukTerlaris'
+      total_revenue:
+        type: integer
+      total_transaksi:
+        type: integer
+    type: object
+  models.Transaction:
+    properties:
+      created_at:
+        type: string
+      details:
+        items:
+          $ref: '#/definitions/models.TransactionDetail'
+        type: array
+      id:
+        type: integer
+      total_amount:
+        type: integer
+    type: object
+  models.TransactionDetail:
+    properties:
+      id:
+        type: integer
+      product_id:
+        type: integer
+      product_name:
+        type: string
+      quantity:
+        type: integer
+      subtotal:
+        type: integer
+      transaction_id:
         type: integer
     type: object
 host: kasir-api-production-ebf5.up.railway.app
@@ -183,6 +241,36 @@ paths:
       summary: Update category
       tags:
       - categories
+  /checkout/:
+    post:
+      consumes:
+      - application/json
+      description: Create new transaction with items
+      parameters:
+      - description: Checkout Request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/models.CheckoutRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Transaction'
+        "400":
+          description: Invalid request body
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      summary: Checkout transaction
+      tags:
+      - Transaction
   /products:
     get:
       consumes:
@@ -332,4 +420,56 @@ paths:
       summary: Update product
       tags:
       - products
+  /report:
+    get:
+      description: Get daily report or report by date range
+      parameters:
+      - description: Start date (YYYY-MM-DD)
+        in: query
+        name: start_date
+        type: string
+      - description: End date (YYYY-MM-DD)
+        in: query
+        name: end_date
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Report'
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      summary: Get sales report
+      tags:
+      - Report
+  /report/hari-ini:
+    get:
+      description: Get daily report or report by date range
+      parameters:
+      - description: Start date (YYYY-MM-DD)
+        in: query
+        name: start_date
+        type: string
+      - description: End date (YYYY-MM-DD)
+        in: query
+        name: end_date
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Report'
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      summary: Get sales report
+      tags:
+      - Report
 swagger: "2.0"
